--- a/NLua.Test/NLua.Test.csproj
+++ b/NLua.Test/NLua.Test.csproj
@@ -41,8 +41,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EventTest.cs" />
+    <Compile Include="ImportTest.cs" />
+    <Compile Include="ImportTest1.cs" />
+    <Compile Include="ITest.cs" />
+    <Compile Include="LoadAssemblyTest.cs" />
+    <Compile Include="Out_Test.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ref_Test.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\KeraLua.Net40\KeraLua.Net40.csproj">
@@ -53,6 +60,11 @@
       <Project>{591cfbb2-2f33-4f76-ae41-a7bd0799d47b}</Project>
       <Name>NLua.Net40</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Script\json.lua">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
